<resources>
    <string name="app_name">AndroidProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="clear_the_chat">clear the chat</string>
    <string name="textview">TextView</string>
    <string name="send">send</string>
    <string name="matching_tags">Matching Tags</string>
    <string name="actions_txt">Send Request</string>
    <string name="some_description">some description</string>
    <string name="add_friend_button">Add Player</string>
    <string name="close_alert">Close</string>
    <string name="tags">"Tags "</string>
    <string name="amount_title">Friends</string>
    <string name="settings">Settings</string>
    <string name="friends_req">friends_req</string>
    <string name="your_Friends">Your Friends</string>
    <string name="update_your_info">update your info</string>
    <string name="update_friends_list">update friends list</string>
    <string name="rooms">Rooms</string>
    <string name="go_to_chat">go to chat</string>
</resources>
